working AI system with courseCode grabbing, dates are yet to be fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"files.associations": {
 		"wrangler.json": "jsonc"
 	},
-	"chatgpt.openOnStartup": false
+	"chatgpt.openOnStartup": false,
+	"chatgpt.commentCodeLensEnabled": false
 }
